--- a/pages/cotizadores/vehic.html
+++ b/pages/cotizadores/vehic.html
@@ -58,7 +58,6 @@
             <div class="caja-formulario">
                 <h4>Completá...</h4>
                 <h5>Datos de tu vehículo...</h5>
-                <div id="msj-error-cotizador"></div>
                 <form id="formularioSeguroAutomotor" action="">
                     <fieldset class="formulario">
 
@@ -67,7 +66,7 @@
                             <input type="text" id="marca" class="form-control">
                         </div>
                         <div class="mb-3">
-                            <label for="año" class="form-label">Año</label>
+                            <label for="year" class="form-label">Año</label>
                             <input type="number" id="year" class="form-control">
                         </div>
                         <div class="mb-3">
@@ -78,12 +77,12 @@
                 </form>
 
                 <h5>Sobre vos...</h5>
-                <form id="datosPersonalesForm" action="">
+                <form id="formularioSobreVos" action="">
                     <fieldset class="formulario">
 
                         <div class="mb-3">
                             <label for="tel" class="form-label">Teléfono</label>
-                            <input type="tel" id="tel" class="form-control">
+                            <input type="tel" id="tel" class="form-control" autocomplete="tel">
                         </div>
                         <div class="mb-3">
                             <label for="mail" class="form-label">Email</label>
@@ -119,10 +118,11 @@
                             </select>
                         </div>
                     </fieldset>
+                    <div>
+                        <p class="warnings" id="warnings"></p>
+                        <button type="submit" class="boton botongral">Solicitar cotización</button>
+                    </div>
                 </form>
-                <div class="enviar">
-                    <button type="submit" onclick="cotizarSeguro()" class="boton botongral" onclick="solicitarCotizacion()">Solicitar cotización</button>
-                </div>
                 <p>Tené en cuenta que no recibirás una cotización automática, sino que serás contactado por un
                     especialista para obtener un asesoramiento preciso.
                 </p>
@@ -161,11 +161,12 @@
             <span>Powered by PG</span>
         </section>
     </footer>
-    <script src="../../js/cotizador.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
         <script src="../../js/main.js"></script>
+        <script src="../../js/validarFormularios.js"></script>
+
 
 
 </body>
