--- a/pages/reunion.html
+++ b/pages/reunion.html
@@ -9,7 +9,8 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="../media/images/favicon.png" type="image/x-icon">
-    <meta name="description" content="Coordina una reunión virtual con Patricio Gallo para recibir asesoramiento personalizado en seguros. ¡Planifica tu futuro financiero hoy!">
+    <meta name="description"
+        content="Coordina una reunión virtual con Patricio Gallo para recibir asesoramiento personalizado en seguros. ¡Planifica tu futuro financiero hoy!">
 </head>
 
 <body>
@@ -100,7 +101,7 @@
             <div class="caja-formulario">
                 <h2>Formulario de Agendamiento:</h2>
                 <h3>Información Personal:</h3>
-                <form action="#">
+                <form action="#" id="formularioReunion">
                     <fieldset class="formulario">
 
                         <div class="mb-3">
@@ -117,14 +118,12 @@
                                 required>
                         </div>
                     </fieldset>
-                </form>
                 <h3>Intereses y Preferencias:</h3>
-                <form action="#">
                     <fieldset class="formulario">
 
                         <div class="mb-3">
                             <label for="tipo-de-seguro" class="form-label">Tipo de Seguro de Interés:</label>
-                            <select class="form-control" id="tipo-de-seguro" required>
+                            <select class="form-control" id="tipoDeSeguro" required>
                                 <option value="Vida">Vida</option>
                                 <option value="Hogar">Hogar</option>
                                 <option value="Auto">Auto</option>
@@ -140,20 +139,24 @@
                         <div class="mb-3">
                             <label for="preferencia-hora" class="form-label">Preferencia de Día y Hora para la
                                 Reunión:</label>
-                            <input type="text" class="form-control" id="preferencia-hora"
+                            <input type="text" class="form-control" id="preferenciaHora"
                                 placeholder="Día y Hora Preferidos">
                         </div>
                         <div class="mb-3">
                             <label for="preferencia-contacto" class="form-label">¿Cómo Prefieres ser Contactado?
                                 (opcional)</label>
-                            <select id="preferencia-contacto" class="form-control">
+                            <select id="preferenciaContacto" class="form-control">
                                 <option value="Correo Electrónico">Correo Electrónico</option>
                                 <option value="Teléfono">Teléfono</option>
                             </select>
                         </div>
                     </fieldset>
+                    <div>
+                        <p class="warnings" id="warnings"></p>
+                        <button type="submit" class="boton botongral">Enviar</button>
+                    </div>
                 </form>
-                <button type="submit" class="boton botongral">Enviar</button>
+
 
             </div>
 
@@ -188,7 +191,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-        <script src="../js/main.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/validarFormularios.js"></script>
 
 </body>
 
