Aplicando correcciones JavaScript

--- a/pages/cotizadores/vehic.html
+++ b/pages/cotizadores/vehic.html
@@ -82,7 +82,7 @@
 
                         <div class="mb-3">
                             <label for="tel" class="form-label">Teléfono</label>
-                            <input type="tel" id="tel" class="form-control" autocomplete="tel">
+                            <input type="tel" class="form-control" id="tel" placeholder="Número de Teléfono" required autocomplete="tel">
                         </div>
                         <div class="mb-3">
                             <label for="mail" class="form-label">Email</label>
