--- a/pages/cotizadores/vida.html
+++ b/pages/cotizadores/vida.html
@@ -78,7 +78,7 @@
                     <fieldset class="formulario">
                         <div class="mb-3">
                             <label for="tel" class="form-label">Teléfono</label>
-                            <input type="tel" id="tel" class="form-control">
+                            <input type="tel" class="form-control" id="tel" placeholder="Número de Teléfono" required autocomplete="tel">
                         </div>
                         <div class="mb-3">
                             <label for="mail" class="form-label">Email</label>
