--- a/pages/reunion.html
+++ b/pages/reunion.html
@@ -110,7 +110,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="tel" class="form-label">Teléfono:</label>
-                            <input type="tel" class="form-control" id="tel" placeholder="Número de Teléfono" required>
+                            <input type="tel" class="form-control" id="tel" placeholder="Número de Teléfono" required autocomplete="tel">
                         </div>
                         <div class="mb-3">
                             <label for="mail" class="form-label">Email</label>
