Automatizando mensajes de Servicio de Remolque

--- a/index.html
+++ b/index.html
@@ -61,19 +61,20 @@
         <img src="./media/images/whatsapp.png" alt="Ir a Whatsapp" class="boton-wsp" />
       </a>
       <div id="chatBox">
-
-        <ul>
+        <p>
+          ¡Hola! 😊 Soy el asistente virtual de Patricio Gallo. Para brindarte la mejor asistencia, por favor, comparte tu nombre. Si eres cliente, incluye también la patente de tu vehículo y el nombre de tu compañía aseguradora. ¡Estoy aquí para ayudarte! 🚗✨</p>
+        <!-- <ul>
           <li><button onclick="mostrarRespuesta('Descargar documentos')">📄 Descargar documentos</button></li>
           <li><button onclick="mostrarRespuesta('Contratar un seguro')">🛡️ Contratar un seguro</button></li>
           <li><button onclick="mostrarRespuesta('Reportar un siniestro')">🚗 Reportar un siniestro</button></li>
           <li><button onclick="mostrarRespuesta('Solicitar servicio de remolque')">🚑 Solicitar servicio de
               remolque</button></li>
           <li><button onclick="mostrarRespuesta('Transferir un vehículo')">📝 Transferir un vehículo</button></li>
-          <li><button onclick="mostrarRespuesta('Tengo otra pregunta')">Tengo otra pregunta</button></li>
-        </ul>
+          <li><button onclick="mostrarRespuesta('Tengo otra pregunta')">🤔 Tengo otra pregunta</button></li>
+        </ul> -->
         <div id="chatMensajes">
         </div>
-        <input type="text" id="respuestaChat" placeholder="Escribe el número de tu consulta">
+        <input type="text" id="respuestaChat" placeholder="Escribe tu respuesta...">
         <button onclick="enviarMensaje()">Enviar</button>
         <button class="boton botongral" onclick="ocultarCaja()">Cerrar</button>
       </div>
